--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>React Project</title>
 		<meta name="description" content="A simple react project folder">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    	<link rel="stylesheet" href="css/index.css">
 	</head>
 	<body>
 		<div id="root"></div>
