--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="A simple react project folder">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     	<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/reset.css">
 	</head>
 	<body>
 		<div id="root"></div>
