--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
 		<title>React Project</title>
 		<meta name="description" content="A simple react project folder">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    	<link rel="stylesheet" href="css/index.css">
 		<link rel="stylesheet" href="css/reset.css">
+    	<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="css/medium.css">
+		<link rel="stylesheet" href="css/large.css">
+		<link rel="stylesheet" href="css/extralarge.css">
 	</head>
 	<body>
 		<div id="root"></div>
